--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass": "sass --watch src/styles/global.scss src/styles/css/global.css"
   },
   "devDependencies": {
+    "sass": "^1.55.0",
     "vite": "^3.1.0"
   }
 }
